--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Name</title>
+    <title>Abhishek Malviya</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./Photoused/logo/tabicon.png" />
 
     <link
       rel="stylesheet"
